# kipod

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE THIRD PARTY.txt  LICENSE.txt  README.md  README.txt
external_libs/imgui/: imguifilesystem.cpp
include/: camera.h  core.h  engine_controls.h  engine_events.h  engine_input.h  eventmanager.h  glrenderer.h  graphicsalgorithms.h  gui.h  guielement.h  guimathcontrol.h  initshader.h  inputmanager.h  kipod.h  light.h  meshmodel.h  pointset.h  quacry.h  render_buffer.h  render_camera.h  render_engine.h  render_gui.h  render_light.h  render_manager.h  render_material.h  render_object.h  render_primitive.h  render_scene.h  render_shader.h  render_texture.h  render_uniform.h  render_window.h  renderer.h  scene.h  shapes.h  softrenderer.h  texture.h  window.h
include/math/: lattice.h  polygon.h  sl.h
include/utils/: buffer_packing.h  image_loader.h  key_table.h  log.h  mat.h  obj_parsing.h  vec.h
resources/fonts/: LICENSE  license.txt
resources/meshmodels/: LICENSE.txt
shaders/: _fshader_from_faces.glsl  _gshaderNormals.glsl  _gshaderNormals_from_faces.glsl  _vshader.glsl  _vshaderNormals_from_faces.glsl  basic.comp.glsl  basic.frag.glsl  basic.vert.glsl  grid.frag.glsl  grid.vert.glsl  horizontal_blur.comp.glsl  image_inverse.comp.glsl  image_processing.frag.glsl  image_processing.vert.glsl  image_processing_loadimage.frag.glsl  image_processing_loadimage.vert.glsl  lights.frag.glsl  lights.vert.glsl  lines.frag.glsl  lines.vert.glsl  normals.frag.glsl  normals.vert.glsl  passthrough.frag.glsl  points.frag.glsl  points.vert.glsl  shape.vert.glsl  softrenderer.frag.glsl  softrenderer_fshader.glsl  softrenderer_vshader.glsl  textures.frag.glsl  textures.vert.glsl
siegel2021/: CMakeLists.txt
siegel2021/include/: siegel2021.h
siegel2021/linear_algebra/: determinant.cpp  determinant.h  inverse.h  submatrix.h
siegel2021/matrix/: matrix_comparison.h  matrix_expression_template.h  matrix_proxy.h  matrixmatrix_operators.h  matrixscalar_operators.h
siegel2021/vector/: cross.h
src/: camera.cpp  camera.h  core.h  engine_controls.cpp  engine_events.cpp  engine_input.cpp  eventmanager.cpp  eventmanager.h  glrenderer.cpp  glrenderer.h  graphicsalgorithms.cpp  gui.cpp  gui.h  guielement.cpp  guielement.h  guimathcontrol.cpp  guimodule.cpp  guimodule.h  initshader.cpp  inputmanager.cpp  kipod.h  light.cpp  light.h  main.cpp  meshmodel.cpp  meshmodel.h  pointset.cpp  pointset.h  primmeshmodel.cpp  primmeshmodel.h  quacry.cpp  quacry.h  render_buffer.cpp  render_camera.cpp  render_engine.cpp  render_gui.cpp  render_light.cpp  render_manager.cpp  render_material.cpp  render_object.cpp  (+17 more)
src/compute/opengl/: compute_shader.cpp  compute_shader.h
src/engine/: .engine_gui.cpp.swp  engine_application.cpp  engine_application.h  engine_clock.cpp  engine_clock.h  engine_console.cpp  engine_console.h  engine_controls.cpp  engine_controls.h  engine_events.cpp  engine_events.h  engine_gui.cpp  engine_gui.h  engine_input.cpp  engine_input.h  engine_menu.cpp  engine_menu.h  engine_menu_events.cpp  engine_menu_events.h  engine_module.cpp  engine_module.h  engine_sidebar.cpp  engine_sidebar.h  engine_transform.cpp  engine_transform.h
src/entity/: actor.h  component.h  entity.h
src/math/: glmtosiegel.h  lattice.cpp  lattice.h  minkowski_embedding.cpp  minkowski_embedding.h  polygon.cpp  polygon.h  sl.cpp
src/math/raytracing/: intersections.cpp  intersections.h  ray.cpp  ray.h  raytracing_primitives.cpp  raytracing_primitives.h
src/math/siegel2021/: Matrix.h  MatrixExpressionTemplate.h  MatrixManipulations.h  MatrixMetaFunctions.h  MatrixProxy.h  MatrixTest.h  MatrixTransposeView.h  siegel2021.h
src/math/softrenderer/: graphicsalgorithms.cpp  graphicsalgorithms.h
src/modules/: basicmodule.cpp  basicmodule.h
src/modules/image_processing/: image.cpp  image.h  image_processing_console.cpp  image_processing_console.h  image_processing_module.cpp  image_processing_module.h  image_processing_scene.cpp  image_processing_scene.h  image_processing_sidebar.cpp  image_processing_sidebar.h  kernel.h
src/modules/meshmodels/: meshmodel.cpp  meshmodel.h  meshmodel_API_scene.h  meshmodel_boundingbox.cpp  meshmodel_boundingbox.h  meshmodel_console.cpp  meshmodel_console.h  meshmodel_module.cpp  meshmodel_module.h  meshmodel_opengl_module.cpp  meshmodel_opengl_module.h  meshmodel_opengl_scene.cpp  meshmodel_opengl_scene.h  meshmodel_parsing.cpp  meshmodel_parsing.h  meshmodel_primitive.cpp  meshmodel_primitive.h  meshmodel_scene.cpp  meshmodel_scene.h  meshmodel_sidebar.cpp  meshmodel_sidebar.h  meshmodelscene.cpp  meshmodelscene.h
src/modules/module_template/: template_console.h  template_module.cpp  template_module.h  template_scene.cpp  template_scene.h
src/modules/shapes/: shape.cpp  shape.h  shapes_module.cpp  shapes_module.h  shapes_polygon.cpp  shapes_polygon.h  shapes_scene.cpp  shapes_scene.h  shapes_sidebar.cpp  shapes_sidebar.h
src/modules/softrenderer/: softrenderer.cpp  softrenderer.h  softrenderer_camera.h  softrenderer_console.cpp  softrenderer_console.h  softrenderer_light.cpp  softrenderer_light.h  softrenderer_module.cpp  softrenderer_module.h  softrenderer_scene.cpp  softrenderer_scene.h  (+4 more)
src/render/: initshader.cpp  initshader.h  render_buffer.cpp  render_buffer.h  render_camera.cpp  render_camera.h  render_engine.cpp  render_engine.h  render_framebuffer.cpp  render_framebuffer.h  render_layout.cpp  render_layout.h  render_light.cpp  render_light.h  render_manager.cpp  render_manager.h  render_material.cpp  render_material.h  render_object.cpp  render_object.h  render_primitive.cpp  render_primitive.h  render_scene.cpp  render_scene.h  render_shader.cpp  render_shader.h  render_shape.cpp  render_shape.h  render_texture.cpp  render_texture.h  render_uniform.cpp  render_uniform.h  render_window.cpp  render_window.h
src/utils/: buffer_packing.h  debug.h  hash.h  image_loader.cpp  image_loader.h  image_writer.cpp  image_writer.h  imgui_console.h  imgui_utils.h  key_table.h  log.cpp  log.h  mat.h  obj_parsing.h  random.h  vec.h
(+72 files in other folders)
